--- a/snake.html
+++ b/snake.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
     <title>OG Snake Game</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style-snake.css" />
+    <script src="snake-script.js" defer></script>
   </head>
   <body>
     <div>
